maintenance fixes - version bump - fix deprecated java statements - NPM package version updates